2025-08-10 Fred Gleason <fredg@paravelsystems.com>
	* Stubbed out dvtdbmgr(8).
	* Modified the parameters names in the '[mySQL]' section of
	davit.conf(5) to be consistent with those used in rd.conf(5).
2025-08-13 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Duplicate Affiliates' report in davit(1).
	* Added a database management utility in dvtdbmgr(8).
	* Added a davit.conf(5) man page.
2025-08-13 Fred Gleason <fredg@paravelsystems.com>
	* Debianized the project.
2025-08-14 Fred Gleason <fredg@paravelsystems.com>
	* Removed database creation and modification code from davit(1).
2025-08-14 Fred Gleason <fredg@paravelsystems.com>
	* Removed 'build_win32.bat', 'davit.ini', 'davit.ism' and
	'kdmrc-example'.
2025-08-14 Fred Gleason <fredg@paravelsystems.com>
	* Removed 'utils/vnc/'.
2025-08-14 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in the 'davit-core' DEB package that caused the
	davit.conf(5) configuration file to fail to be initialized
	correctly.
2025-08-14 Fred Gleason <fredg@paravelsystems.com>
	* Fixed bugs in 'configure.ac' that caused spurious error messages.
2025-08-14 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to v3.0.0rc0.
2025-08-14 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug that broke the 'make deb' target.
2025-08-14 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to v3.0.0rc0a.
2025-08-14 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'apache2' dependency to the 'davit-web' DEB package.
2025-08-14 Fred Gleason <fredg@paravelsystems.com>
	* Tweaked the login code in davit(1) so any error dialogs appear atop
	the login widget.
2025-08-14 Fred Gleason <fredg@paravelsystems.com>
	* Removed the 'SMTP Server Settings' section from the 'Edit System
	E-Mail Settings' dialog in davit(1).
2025-08-15 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a regression in davit(1) that caused the 'Edit Affiliate Data'
	permission to fail to be enforced.