@@ -1053,3 +1053,6 @@
 2025-08-15 Fred Gleason <fredg@paravelsystems.com>
 	* Fixed a regression in davit(1) that caused the 'Edit Affiliate Data'
 	permission to fail to be enforced.
+2025-08-15 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a regression in davit(1) that caused the 'Schedule Programs'
+	permission to fail to be enforced.
